--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1,7 +1,7 @@
 .box {
     display: flex;
     flex-flow: row;
-    height: 100%;
+    flex: 2;
   }
 
 .containerBox {
@@ -11,6 +11,6 @@
 }
 
   .buttonContainer {
-        margin-left: 5px;
-        height: 100%;
+    margin-left: 5px;
+    display: flex;
   }
