--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -7,10 +7,14 @@
 .containerBox {
     display: flex;
     margin: auto;
-    flex-flow: column;
+    flex: 1 1 0px;
+    flex-flow: row;
+    height: 100%;
 }
 
   .buttonContainer {
     margin-left: 5px;
     display: flex;
   }
+
+ 
