--- a/frontend/src/styles/musicGenre.css
+++ b/frontend/src/styles/musicGenre.css
@@ -1,3 +1,12 @@
 .musicGenreContainer {
     margin: auto;
   }
+
+
+.loadingGenreContainer {
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
