--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -73,3 +73,10 @@
 .result-block-container .result-block {
   opacity: 1;
 }
+
+.background-image {
+  background: url(./images/background1.jpg) no-repeat center center fixed;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
