--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -11,8 +11,9 @@
     flex-flow: row;
     height: 100%;
     width: 100%;
-    margin-bottom: 1rem;
-}
+    min-height: 200px;
+    /* min-height: 250px; set this so that carousel is at bottom */
+} 
 
   .buttonContainer {
     margin-left: 5px;
